alignment corrections...

--- a/ReichstagWebpage/style.css
+++ b/ReichstagWebpage/style.css
@@ -7,8 +7,6 @@ header {
     display: inline-block;
     width: 50px;
     height: 50px;
-    /*background-image: url(assets/sprint.svg);
-    background-repeat: no-repeat;*/
     margin: 20px;
 }
 
@@ -20,52 +18,75 @@ header {
     top: 10px;
     left: 85%;
     padding: 10px;
-    /*background-image: url(assets/hamburgermenu.svg);
-    background-repeat: no-repeat;*/
 }
 .banner {
     position: relative;
     width: 100%;
-    height: 600px;
+    height: 700px;
     font-family: "Georgia";
-    font-size: 0.75rem;
+    font-size: 20px;
     font-style: italic;
+    color: white;
     background-image: url(assets/reichstag.jpg);
     background-size: cover;
     background-position: center;
 }
-button {
-    display: inline-block;
-    width: 150px;
-    height: 10px;
-    color: orange;
-    font-family: "sans-serif";
-    border: 1px solid orange;
-    border-radius: 50px;
-    background-color: #d4b918;
-    padding: 10px;
-    position: relative;
-}
-h1 {
-    text-align: center;
+#bannercontent {
     position: absolute;
-    top: 50%;
+    top: 58%;
     left: 50%;
     transform: translate(-50%, -50%);
+    text-align: center;
+}
+button {
+    width: 250px;
+    height: 40px;
+    color: #ca6d0a;
+    font-family: "sans-serif";
+    font-size: 25px;
+    text-align: center;
+    border: 3px solid #ca6d0a;
+    border-radius: 50px;
+    background-color: #d4b918;
+}
+
+h1 {
     color: white;
     padding: 5px;
 }
 .items {
-    padding: 10px;
-    margin-top: 10px;
+    padding: 5px;
+    background-color: silver;
 }
 .row {
-    display: inline-block;
-    height: 300px;
-    width: 300px;
     font-family: "Georgia";
-    font-size: 10px;
+    font-size: 15px;
     font-weight: bolder;
+    margin-left: 15%;
+    width: 85%;
+}
+
+.column {
+    float: left;
+    width: 33.33%;
+    padding: 15px;
+    text-align: left;
+}
+h3 {
+    margin-bottom: 0;
+}
+/* Clearfix (clear floats) */
+.row::after {
+    content: "";
+    clear: both;
+    display: table;
+}
+
+.icons {
+    margin-top: 30px;
+    height: 50px;
+    width: 50px;
+    float: left;
 }
 
 .footer {
@@ -74,12 +95,7 @@ h1 {
     bottom: 0;
     left: 0;
     height: 10px;
-    padding: 1rem;
+    padding: 10px;
     background-color: grey;
     color: white;
-}
-.icons {
-    margin-top: 10px;
-    height: 50px;
-    width: 50px;
 }
